force-app/main/default/objects/Match__c/fields/Match_End__c.field-meta.xml
<CustomField>
    <fullName>Match_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Match End</label>
    <type>DateTime</type>
</CustomField>