force-app/main/default/objects/Match__c/fields/Match_Start__c.field-meta.xml
<CustomField>
    <fullName>Match_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Match Start</label>
    <type>DateTime</type>
</CustomField>