force-app/main/default/objects/Match__c/fields/Overs__c.field-meta.xml
<CustomField>
    <fullName>Overs__c</fullName>
    <label>Overs</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>